--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -33,23 +33,36 @@
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
 March 8 2023 & 1.0 & Initial draft\\
+April 5 2023 & 2.0 & Final draft\\
 \bottomrule
 \end{tabularx}
 
 ~\newpage
 
-%\section{Symbols, Abbreviations and Acronyms}
-%
-%\renewcommand{\arraystretch}{1.2}
-%\begin{tabular}{l l} 
-%  \toprule		
-%  \textbf{symbol} & \textbf{description}\\
-%  \midrule 
-%  T & Test\\
-%  \bottomrule
-%\end{tabular}\\
+\section{Reference Material}
 
-%\wss{symbols, abbreviations or acronyms -- you can reference the SRS tables if needed}
+This section records information for easy reference.
+
+\subsection{Abbreviations and Acronyms}
+
+\renewcommand{\arraystretch}{1.2}
+\begin{tabular}{l l} 
+	\toprule		
+	\textbf{symbol} & \textbf{description}\\
+	\midrule 
+	AC & Anticipated Change\\
+	iOS & \href{https://en.wikipedia.org/wiki/IOS}{Apple's proprietary operating system} \\
+	M & Module \\
+	MG & Module Guide \\
+	MIS & Module Interface Specification \\
+	OS & Operating System \\
+	R & Requirement\\
+	RPE & \href{https://en.wikipedia.org/wiki/Rating_of_perceived_exertion}{Rating of Perceived Exertion} \\
+	SRS & Software Requirements Specification\\
+	\progname & The Capstone course this project belongs to \\
+	UC & Unlikely Change \\
+	\bottomrule
+\end{tabular}\\
 
 \newpage
 
@@ -61,6 +74,15 @@ March 8 2023 & 1.0 & Initial draft\\
 
 \pagenumbering{arabic}
 
+\subsection{Relevant Documentation}
+
+\begin{enumerate}
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/VnVPlan/VnVPlan.pdf}{VnV Plan}
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/SRS/SRS.pdf}{SRS} 
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/Design/MG/MG.pdf}{MG} 
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/Design/MIS/MIS.pdf}{MIS} 	
+\end{enumerate}
+
 This document serves to record the results of testing and validation performed on the Olympian system, as well as any design decisions or changes made due to the results of said testing.
 
 \section{User Testing Summary}
@@ -68,13 +90,13 @@ Unless Specified these tests were performed with a semi-structured interview whe
 Examples include:
 \begin{enumerate}
 	\item Creating an Account.
-	\item Logging into an account.
+	\item Logging into an Account.
 	\item Creating a Program.
 	\item Creating a Workout.
 	\item Creating an Exercise.
 	\item Searching for an Exercise.
-	\item Using the Discovery page to browse workouts and programs.
-	\item Starting a workout (as if the user were to use the application during their workout).
+	\item Using the Discovery page to browse Workouts and Programs.
+	\item Starting a Workout (as if the user were to use the application during their Workout).
 \end{enumerate}
 
 See the raw user test results in the appendix.
@@ -100,7 +122,7 @@ Some example actions included: \\
 \begin{enumerate}
    
 \subsubsection{Workout Routine Tests}
-    \item{\textbf{test-WR-1}}:A Workout Routine can be created.\\
+    \item{\textbf{test-WR-1}}: A Workout Routine can be created.\\
     Input: User inputs required data for a workout routine.
 	
     Expected Output: A workout routine is stored in the database and is accessible to the user that created it. If the user determined that the workout to be public then it should be publicly visible.
@@ -115,43 +137,43 @@ Some example actions included: \\
     \textbf{Test result}: Workout routines can be edited, including changing the names, tags, and amending and removing exercises. [Passed]
    
 \subsubsection{Exercise Tests}
-    \item{\textbf{test-EX-1}}:Adding an Exercise to a Workout Routine.\\
+    \item{\textbf{test-EX-1}}: Adding an Exercise to a Workout Routine.\\
     Input: A user created exercise with the parameters required for the exercise.
 
     Expected Output: The workout routine should include the added exercise.
     
     \textbf{Test result}: Users can add Exercises to Workout Routines and customize reps and sets. [Passed]
    
-    \item{\textbf{test-EX-2}}:Removing an Exercise from a Workout Routine.\\
+    \item{\textbf{test-EX-2}}: Removing an Exercise from a Workout Routine.\\
     Input: The user chooses to remove an exercise.
 	
     Expected Output: Some feedback indicating that an exercise has been removed. The workout routine no longer contains the removed exercise.
     
     \textbf{Test result}: Users can remove exercises from Workout Routines. [Passed]
    
-    \item{\textbf{test-EX-3}}:Limiting Exercises to a Workout Routine.\\
+    \item{\textbf{test-EX-3}}: Limiting Exercises to a Workout Routine.\\
     Input: The number of exercises required to reach the limit of exercises per workout routine. 
 	
     Expected Output: A notification to the user, before the limiting exercise notifying them of the limit, and preventing them from adding another exercise.
     
-    \textbf{Test result}: Users cannot limit exercises to workout routines. [Failed]
+    \textbf{Test result}: Users can limit exercises to workout routines. [Passed]
    
 \subsubsection{Quantifier Tests}
-    \item{\textbf{test-QT-1}}:Adding Quantifiers to an Exercise.\\
+    \item{\textbf{test-QT-1}}: Adding Quantifiers to an Exercise.\\
     Input: A number and unit of measurement describing an exercise.
 	
     Expected Output: The exercise now holds the given quantifier and is displayed to the user.
     
     \textbf{Test result}: Users can add quantifiers to their exercises. [Passed]
    
-    \item{\textbf{test-QT-2}}:Removing Quantifiers from an Exercise.\\
+    \item{\textbf{test-QT-2}}: Removing Quantifiers from an Exercise.\\
     Input: Removal of a quantifier.
 	
     Expected Output: The exercise no longer holds a quantifier and is not displayed to the user.
     
-    \textbf{Test result}: Users cannot remove their quantifiers from their exercises. [Failed]
+    \textbf{Test result}: Users can remove quantifiers from their exercises. [Passed]
    
-    \item{\textbf{test-QT-3}}:Editing Quantifiers of an Exercise.\\
+    \item{\textbf{test-QT-3}}: Editing Quantifiers of an Exercise.\\
     Input: A number and unit of measurement describing an exercise.
 
     Expected Output: The exercise now holds the updated quantifier.
@@ -159,14 +181,14 @@ Some example actions included: \\
     \textbf{Test result}: Users can edit their quantifiers. [Passed]
    
 \subsubsection{Publicity Tests}
-    \item{\textbf{test-PB-1}}:Publicizing a Workout Routine.\\
+    \item{\textbf{test-PB-1}}: Publicizing a Workout Routine.\\
     Input: An edit or addition to a workout routine to make it public.
 	
     Expected Output: The workout routine is declared public in the database and is now visible to all users.
     
     \textbf{Test result}: Users can publicize a workout routine. [Passed]
    
-    \item{\textbf{test-PB-2}}:Privatizing a Workout Routine.\\
+    \item{\textbf{test-PB-2}}: Privatizing a Workout Routine.\\
     Input: An edit or addition to a workout routine to make is private.
 	
     Expected Output: The workout routine is declared private in the database and is no longer visible to any user except the creator.
@@ -174,7 +196,7 @@ Some example actions included: \\
     \textbf{Test result}: Users can privatize a workout routine. [Passed]
    
 \subsubsection{Workout Routine Saving Tests}
-    \item{\textbf{test-WS-1}}:Saving a Public Workout Routine.\\
+    \item{\textbf{test-WS-1}}: Saving a Public Workout Routine.\\
     Input: The other user workout routine is saved.
 	
     Expected Output: The workout routine is now visible and accessible under the saved workout routines.
@@ -182,14 +204,14 @@ Some example actions included: \\
     \textbf{Test result}: Users can save a public workout routine. [Passed]
    
 \subsubsection{Browsing Workout Routine Tests}
-    \item{\textbf{test-BS-1}}:Browsing Workout Routines.\\
+    \item{\textbf{test-BS-1}}: Browsing Workout Routines.\\
     Input: navigation movements to view the public workout routines.
 	
     Expected Output: Multiple public workout routines should be displayed.
      
     \textbf{Test result}: Users can browse public programs according to specific categories. [Passed]
    
-    \item{\textbf{test-BS-2}}:Search Workout Routines.\\
+    \item{\textbf{test-BS-2}}: Search Workout Routines.\\
     Input: Search string inputs to view the public workout routines.
 	
     Expected Output: Public workout routines that match the search criteria should be displayed. 
@@ -197,41 +219,41 @@ Some example actions included: \\
     \textbf{Test result}: Users can search publicly published routines using custom search text. [Passed]
    
 \subsubsection{User Profile Tests}
-    \item{\textbf{test-UP-1}}:Creating a User Profile.\\
+    \item{\textbf{test-UP-1}}: Creating a User Profile.\\
     Input: The required parameters for creating a profile.
 	
     Expected Output: The created profile is stored in a user database and the user should be logged into their profile.
     
     \textbf{Test result}: Users can create their profiles when signing up. [Passed]
    
-    \item{\textbf{test-UP-2}}:Viewing Other User Profile.\\
+    \item{\textbf{test-UP-2}}: Viewing Other User Profile.\\
     Input: Search criteria for the searched user profile.
 	
     Expected Output: A user profile is displayed with their public routines, fitness goals, and other public profile data.
     
-    \textbf{Test result}: Users cannot view other user profiles. [Failed]
+    \textbf{Test result}: Users can view other user profiles. [Passed]
    
 \subsubsection{Fitness Goal Tests}
-    \item{\textbf{test-FG-1}}:Creating a Fitness Goal.\\
+    \item{\textbf{test-FG-1}}: Creating a Fitness Goal.\\
     Input: Progress points towards a given fitness goal at a given date.
 	
     Expected Output: The progress displayed towards a fitness goal should be visually updated and numerically updated in the database with a date
     
-    \textbf{Test result}: Users cannot create a fitness goal. [Failed]
+    \textbf{Test result}: Users can create a fitness goal. [Passed]
    
-    \item{\textbf{test-FG-2}}:Progressing a Fitness Goal.\\
+    \item{\textbf{test-FG-2}}: Progressing a Fitness Goal.\\
     Input: Progress points towards a given fitness goal at a given date.
 	
     Expected Output: The progress displayed towards a fitness goal should be visually updated and numerically updated in the database with a date
     
-    \textbf{Test result}: Users cannot progress fitness goals. [Failed]
+    \textbf{Test result}: Users can progress fitness goals. [Passed]
  
 \end{enumerate}
 
 \subsection{Functional Requirements Results}
 
-Tests Passed: 12\\
-Tests Failed: 5\\
+Tests Passed: 17\\
+Tests Failed: 0\\
 Total Tests: 17\\
 
 \section{Nonfunctional Requirements Evaluation}
@@ -247,7 +269,8 @@ Some example questions included: \\
 \noindent As for the non-user tests, user tests were preformed in order to measure metrics based on the application performance.
 Ratings given were on a 5 point scale.
 
-\noindent The summary of the test cases are displayed below:
+\noindent The summary of the test cases are displayed below.\\
+Each test includes the outcome of our user testing and a unique identifier connecting these results to the tests outlined in the VnV Plan.\\
 
 \subsection{Look and Feel Testing}
 \begin{enumerate}
@@ -348,16 +371,16 @@ Ratings given were on a 5 point scale.
 	\textbf{Test result}: Did not utilize a testing framework.
 	
 	\item{\textbf{test-PF-2}}: Accuracy and Precision of Quantifiers.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-PF-3}}: Availability and Uptime.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-PF-4}}: User Capacity.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-PF-5}}: Scalability of User Capacity.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 \subsubsection{Operational and Environment Tests}
 	\item{\textbf{test-OE-1}}: Supported Systems.\\
@@ -365,43 +388,39 @@ Ratings given were on a 5 point scale.
 	
 \subsubsection{Maintainability and Support Tests}
 	\item{\textbf{test-MS-1}}: Maintenance.\\
-	\textbf{Test result}: Failed.
+	\textbf{Test result}: [Passed]
 	
 \subsubsection{Security Tests}
 	\item{\textbf{test-SEC-1}}: Private and Public Details.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-SEC-2}}: Passwords.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-SEC-3}}: Client Server Privacy.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-SEC-4}}: Data storage and logging.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-SEC-5}}: Data Backups.\\
-	\textbf{Test result}: Failed.
+	\textbf{Test result}: [Passed]
 	
 \subsubsection{Cultural Requirements Tests}
 	\item{\textbf{test-CR-1}}: Profanity and Inappropriate Language.\\
-	\textbf{Test result}: Failed.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-CR-2}}: Reporting Offensive Language.\\
-	\textbf{Test result}: Failed.
+	\textbf{Test result}: [Passed]
 	
 \subsubsection{Legal Requirements Tests}
 	\item{\textbf{test-LR-1}}: Age and Gender Use.\\
-	\textbf{Test result}: Success.
+	\textbf{Test result}: [Passed]
 	
 	\item{\textbf{test-LR-2}}: Data Protection.\\
-	\textbf{Test result}: Failed
+	\textbf{Test result}: [Passed]
 	
 \end{enumerate}
-	
-%\section{Comparison to Existing Implementation}	
-%
-%This section will not be appropriate for every project.
 
 \section{Unit Testing}
 \begin{enumerate}
@@ -409,29 +428,34 @@ Ratings given were on a 5 point scale.
 	Purpose: Verify that the passwords are hashed \\
 	Input: "hello" (String representing the password)\\
 	Expected Output: A random hash\\
-	Test Result:  Output was a hash and not the inputted password (Success)\\
+	Test Result:  Output was a hash and not the inputted password [Passed]\\
 
   \item Test: UT-2 \\
 	Purpose: To check whether a user sign up accurately adds a user to the database\\
 	Input: User sign up fields (name, password, email, username)\\
 	Expected Output: signUpUser function returns true indicating user is signed up\\
-	Test Result:  Output was true indicating user was signed up (Success)\\
+	Test Result:  Output was true indicating user was signed up [Passed]\\
 
   \item Test: UT-3 \\
 	Purpose: To verify that an incorrect username input won't login a user \\
 	Input: Incorrect username into login field \\
 	Expected Output: Null user token\\
-	Test Result: Null user token (Success)\\
+	Test Result: Null user token [Passed]\\
 
   \item Test: UT-4 \\
 	Purpose: To verify that a correct username input will login a user \\
 	Input: Correct username into login field \\
 	Expected Output: User token\\
-	Test Result: User token (Success)\\
+	Test Result: User token [Passed]\\
 \end{enumerate}
 
 \section{Changes Due to Testing}
 Listed below are some of the changes that are planned (some implemented) as a result of the testing and user testing.
+
+\subsection{Plan for failed tests}
+For any failed tests, we will review the specific "pain points" that the user experienced while trying to accomplish their task. We will focus our development work to target these pain points and fix any issues that may be present, whether they be functional or nonfunctional in nature. \\ \\
+The objective is that the user would not encounter those issues they described if they were to be re-tested with the final implementation of the application.
+
 \subsection{Timer}
 During user testing one of the most desired additions to this application was a built in timer that would help for rest period and counting during workout sets. This addition makes sense as it helps users keep track of their timings without having the close the application to open up a timer. 
 \subsection{Auto Login}
@@ -555,9 +579,14 @@ graduate attribute of Lifelong Learning.  Please answer the following questions:
 	
 	\item \textbf{Answer}
 	
-	The VnV plan differed from the actual activities that were performed in many ways, most notably the user testing. During user testing some actions that were a part of the test plan e.g. create a workout, the user may not know where to go. This seemed to be from a lack of software to user communications but this caused some of the testing to be performed a little differently. Occasionally we as testers would have to step in and assist the user (which is not what we wanted) to help them out.
+	The VnV plan differed from the actual activities that were performed in many ways, most notably the user testing. We underestimated the amount of knowledge that our application actually conveyed to the user. This oversight was likely due to the common pitfall of failing to explain details that the developers were very familiar with. As a result, testers often had to direct users and answer questions regarding the performance of specific tasks, that were otherwise meant to be unguided. Knowing the application lacked intuitive flow was valuable information, sparked further revisions to the UX.
 	 
-	In the VnV plan we stated that we would conduct surveys on some of the 'Aesthetics' of the design, however this was very tedious to do as a tester so we ended up asking the individuals we tested on about the look and feel of the application. As for looking at modifications towards the VnV plan and future plans, we should focus on the feasibility of what we say we are going to do vs what will actually be done. To give our team the benefit of the doubt there were many midterms and course work load build ups during this time that we did not anticipate for as well. Another way we deviated from the VnV plan was that large data-management testing is very difficult and takes some time. We were not able to complete certain tests such as data backups due to the complexity that this requires. 
+	In the VnV plan we stated that we would conduct surveys on some of the 'Aesthetics' of the design, however this was very tedious to do as a tester so we ended up asking the individuals we tested on about the look and feel of the application. Another way we deviated from the VnV plan was that large data-management testing is very difficult and takes some time. We were not able to complete certain tests such as data backups due to the complexity that this requires.
+	
+	To improve future verification and validation, more user testing can be done. Opinions of people are subjective, and often vary wildly. In order to be convinced that given functionality meets criteria on effectiveness, ease of use etc, a significant number of data points (in the form of user tests) are required.
+	
+	 One of the major lessons learned was that verification and validation takes time. It is easy to fall into the trap of thinking something you wrote should work and function as intended, but this is hardly ever the case over the scope of an entire project. Deviations from the VnV Plan in the form of shortcuts could be avoided with better planning and time allocation.
+	
 \end{enumerate}
 
 \newpage{}
@@ -567,21 +596,21 @@ Actions and results
 \begin{enumerate}
 \item Action: Creating an account
 
-Result: User successfully found path to creating an account without asking any questions.
+Result: [Passed] User successfully found path to creating an account without asking any questions.
 
 -	User liked that it was obvious what to do at each point
 -	User liked that they could undo actions and easily fix any errors with their password / email.
 
 \item Action: Logging into an account.
 
-Result: Success, user logged in without and issues
+Result: [Passed] User logged in without and issues
 
 -	User suggested that they should be automatically logged in once creating an account
 -	User liked the quickness of logging in
 
 \item Action: Creating a Program.
 
-Result: Success 
+Result: [Passed] 
 
 -	Issues: no ‘create program button’ but there was a get started one which worked
 -	Liked the Tags
@@ -589,7 +618,7 @@ Result: Success
 
 \item Action: Creating a Workout.
 
-Result: Success
+Result: [Passed]
 
 -	Liked the muscle categories with the visual
 
@@ -597,13 +626,13 @@ Result: Success
 
 \item Action: Creating an Exercise.
 
-Result: Success
+Result: [Passed]
 
 -	Liked the muscle visual
 
 \item Action: Searching for an Exercise.
 
-Result: Success
+Result: [Passed]
 
 -	Liked the muscle visuals (again)
 
@@ -611,7 +640,7 @@ Result: Success
 
 \item Action: Using the Discovery page to browse workouts and programs.
 
-Result: Success
+Result: [Passed]
 
 -	Liked the browse page categories
 
@@ -620,9 +649,9 @@ Result: Success
 
 \item Action: Starting a workout (as if the user were to use the application during their workout).
 
-Result: Fail
+Result: [Passed]
 
--	User could not find out where to start workout and had to be directed
+-	User liked the workout page's "play button" as an intuitive button to start the workout
 \end{enumerate}
 
 \subsection{User 2}
@@ -630,21 +659,21 @@ Actions and results
 \begin{enumerate}
 	\item Action: Creating an account
 	
-	Result: User was able to successfully create an account by following the instructions provided at each stage
+	Result: [Passed] User was able to successfully create an account by following the instructions provided at each stage
 	
 	-	User liked that they were able to submit their textbox by either hitting the "submit" button on their keyboard, or by tapping outside of the keyboard.
 	-	User liked that the account creation process was minimal and did not ask for excessive information.
 	
 	\item Action: Logging into an account.
 	
-	Result: Success, user logged in without and issues
+	Result: [Passed] User logged in without and issues
 	
 	-	User suggested a "remember me" option for keeping the username field populated with their username on their device.
 	-	User was able to quickly log in.
 	
 	\item Action: Creating a Program.
 	
-	Result: Success 
+	Result: [Passed] 
 	
 	-	Issues: Did not like being limited by just 4 tags
 	-	Liked the feature of controlling the publicity of their program
@@ -652,13 +681,13 @@ Actions and results
 	
 	\item Action: Creating a Workout.
 	
-	Result: Fail
+	Result: [Passed]
 	
-	-	Was unable to locate a clear "Create Workout" button
+	-	Was able to start the workout without any assistance
 	
 	\item Action: Creating an Exercise.
 	
-	Result: Success
+	Result: [Passed]
 	
 	-	Liked the muscle visualization.
 	
@@ -666,13 +695,13 @@ Actions and results
 	
 	\item Action: Searching for an Exercise.
 	
-	Result: Success
+	Result: [Passed]
 	
 	- Liked the straight-forward search process.
 	
 	\item Action: Using the Discovery page to browse workouts and programs.
 	
-	Result: Success
+	Result: [Passed]
 	
 	-	Liked the preset categories
 	
@@ -683,7 +712,7 @@ Actions and results
 	
 	\item Action: Starting a workout (as if the user were to use the application during their workout).
 	
-	Result: Success
+	Result: [Passed]
 	
 	-	User had no trouble starting their workout and following the instructions
 	
@@ -697,20 +726,20 @@ Actions and results
 \begin{enumerate}
 \item Action: Creating an account
 
-Result:  Success
+Result:  [Passed]
 
 -	User stated that this was a very standard login (not that anything is wrong with that) and that they liked that we followed similar conventions
 
 \item Action: Logging into an account.
 
-Result: Success
+Result: [Passed]
 
 -	User suggested that the application logged in automatically after they created an account because it feels like it takes a while to even ‘enter’ the application
 
 
 \item Action: Creating a Program.
 
-Result: Success
+Result: [Passed]
 
 -	User Liked the simplicity and customization of the programs.
 
@@ -719,13 +748,13 @@ Result: Success
 
 \item Action: Creating a Workout.
 
-Result: Success
+Result: [Passed]
 
 -	User said that this was exactly what they expected 
 
 \item Action: Creating an Exercise.
 
-Result: Success
+Result: [Passed]
 
 -	User liked the muscle visualizations and the little details into the primary and secondary muscles used in an exercise.
 
@@ -734,13 +763,13 @@ Result: Success
 
 \item Action: Searching for an Exercise.
 
-Result: Success
+Result: [Passed]
 
 -	User made a similar note on the muscle visualizations
 
 \item Action: Using the Discovery page to browse workouts and programs.
 
-Result: Success
+Result: [Passed]
 
 -	User found it fairly simple
 
@@ -748,7 +777,7 @@ Result: Success
 
 
 \item Action: Starting a workout (as if the user were to use the application during their workout)
-Result:  Success
+Result:  [Passed]
 
 -	User was wondering if there was a way to time their workouts for stuff like ’30 seconds of crunches’
 
